# warren

./: .gitignore  kospi_200.xlsx  manage.py  pyproject.toml
collectors/: __init__.py  calc_mean_sd.py  calc_result.py  kospi_200.py  stock_price.py
models/: __init__.py  calculate.py  price.py  stock.py
