[tool.poetry]
name = "warren"
version = "0.1.1"
description = ""
authors = ["hyo <hyoseockkim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
SQLAlchemy = "^1.3"
click = "^7.0"
xlrd = "^1.2"
requests = "^2.22"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
